--- a/.github/workflows/podman-publish.yml
+++ b/.github/workflows/podman-publish.yml
@@ -16,7 +16,7 @@ on:
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: quay.io
-  REGISTRY_USER: jometzner-build
+  REGISTRY_USER: jometzner+build
   # github.repository as <account>/<repo>
   IMAGE_NAME: jometzner/wget
 
